--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,29 +1,34 @@
 <%= form_for(@task, remote: true) do |f| %>
-  <% if @task.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
+<% if @task.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
 
-      <ul>
-      <% @task.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :url %><br>
-    <%= f.text_field :url %>
-  </div>
-  <div class="field">
-    <%= f.label :words %><br>
-    <%= f.text_field :words %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <ul>
+    <% @task.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
 <% end %>
+
+<div class="text-center">
+  <div class="container">
+    <font color="white"> 
+      <h1>We monitor webpages, so you don't have to!</h1>
+      <h4>Enter the URL of the webpage you want to monitor. We’ll send You an email when we find a keyword</h4>
+    </font>
+    <div class="form-group">
+      <%= f.text_field :url, type: "text", class: "form-control", placeholder: 'URL to monitor' %>
+    </div>
+    <div class="form-group">
+      <%= f.text_field :words, type: "text", class: "form-control", placeholder: 'Keywords (separated by a semicolon)' %>
+    </div>
+    <div class="form-group">
+      <%= f.text_field :email, type: "email", class: "form-control", placeholder: 'Your e-mail address' %>
+    </div>
+    <div class="actions">
+      <%= f.submit "Start Free Monitoring!", class: "btn btn-default" %>
+    </div>
+    <% end %>
+  </div>
+</div>
