--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,17 @@
-<p id="notice"><%= notice %></p>
+<% if flash[:notice] %>
+<div id="notice"><%= flash[:notice] %></div>
+<% end %>
 
-<h1>Do You want to submit another task?</h1>
+<% if flash[:notice].blank? %>
+  <h1> flash hash is blank </h1>
+<% end %>
 
-<%= link_to 'New Task', new_task_path %>
+<body style="background-color:#419CD9">
+	<div class="text-center">
+		<font color="white"> 
+			<h1>Do You want to submit another task?</h1>
+		</font>
+
+		<%= link_to 'New Task', new_task_path, {:style=>'color:#000000;', :class => "btn btn-default"} %>
+	</div>
+</body>
