--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,24 +11,57 @@
 </div>
 <% end %>
 
-<div class="text-center">
+<div class="text-center" style="padding-top:140px">
   <div class="container">
     <font color="white"> 
       <h1>We monitor webpages, so you don't have to!</h1>
-      <h4>Enter the URL of the webpage you want to monitor. We’ll send You an email when we find a keyword</h4>
+      <h3>Enter the URL of the webpage you want to monitor. We’ll send You an email when we find a keyword</h3>
     </font>
-    <div class="form-group">
-      <%= f.text_field :url, type: "text", class: "form-control", placeholder: 'URL to monitor' %>
+
+    <div class="row">
+      <div class="col-md-3">
+      </div>
+
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-body">
+
+            <div class="form-group">
+              <div class="form-group form-group-lg">
+                <%= f.text_field :url, type: "text", class: "form-control", placeholder: 'Enter Website URL, e.g. http://www.google.com', required: "true" %>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="form-group form-group-lg">
+                <%= f.text_field :words, type: "text", class: "form-control", placeholder: 'Keywords (separated by a semicolon)', required: "true" %>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="form-group form-group-lg">
+                <%= f.text_field :email, type: "email", class: "form-control", placeholder: 'Your e-mail address', required: "true" %>
+              </div>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "Start Free Monitoring!", class: "btn btn-lg btn-success" %>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+      </div>
     </div>
-    <div class="form-group">
-      <%= f.text_field :words, type: "text", class: "form-control", placeholder: 'Keywords (separated by a semicolon)' %>
-    </div>
-    <div class="form-group">
-      <%= f.text_field :email, type: "email", class: "form-control", placeholder: 'Your e-mail address' %>
-    </div>
-    <div class="actions">
-      <%= f.submit "Start Free Monitoring!", class: "btn btn-default" %>
-    </div>
-    <% end %>
+    <font color="white"> 
+      We will keep your email secret and free of spam: it’s a promise!
+    </font> 
+
   </div>
 </div>
+
+</form>
+<% end %>
+
