--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,6 +12,6 @@
 			<h1>Do You want to submit a task?</h1>
 		</font>
 
-		<%= link_to 'New Task', new_task_path, {:style=>'color:#000000;', :class => "btn btn-default"} %>
+		<%= link_to 'New Task', new_task_path, {style: 'color:#000000;', class: "btn btn-default"} %>
 	</div>
 </body>
