--- a/app/views/visitor_mailer/contact_email.html.erb
+++ b/app/views/visitor_mailer/contact_email.html.erb
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Your task is completed</h1>
-    <h2>Your URL has the keywords you were looking for</h2>
+    <h2>Your URL: <%= @url %> has the keyword(s) you were looking for</h2>
   </body>
 </html>
