--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<div align="center" color="red">
+<div align="center">
 	<% if flash[:notice].blank? %>
 	  <h2> TASK WAS NOT CREATED! </h2>
 	<% end %>
@@ -10,6 +10,6 @@
 			<h1>Do You want to create a new notification?</h1>
 		</font>
 
-		<%= link_to 'New Notification', new_task_path, {class: "btn btn-lg btn-success"} %>
+		<%= link_to 'New Notification', root_path, {class: "btn btn-lg btn-success"} %>
 	</div>
 </body>
