--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -47,7 +47,15 @@
             <div class="actions">
               <%= f.submit "Start Free Monitoring!", class: "btn btn-lg btn-success" %>
             </div>
-
+            <br/>
+            <div class="user">
+              <% if user_signed_in? %>
+              <%= link_to('Sign out', destroy_user_session_path,class: "btn btn-lg btn-primary", :method => :delete) %>
+              <%= link_to('Tasks', tasks_path,class: "btn btn-lg btn-primary") %> 
+              <% else %>
+              <%= link_to "Log in", new_user_session_path,class: "btn btn-lg btn-success" %><br />
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
