--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,17 +11,18 @@
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<% @tasks.each do |task| %>
-						<%= task.url %></td>
-						<%= task.words %></td>
+						<li><%= task.url %></li>
 						<span id="<%= task.id %>"><%= task.completed %></span>
-						<%= link_to('Delete', task_path(task),class: "btn btn-lg btn-warning", :method => :delete) %>
-						<%= form_for task do |t| %>
-						<%= t.check_box :completed %>
-						<%= t.submit "Change", :class => 'task_completed' %> 
+						<%= link_to('Delete', task_path(task),:method => :delete) %>
+						<% if task.completed == false %>
+						<%= link_to('On',task_update_path(task),:method => :put,:class => 'task_completed' )%>
+						<% else %>
+						<%= link_to('Off',task_update_path(task),:method =>:put,:class => 'task_not_completed') %>
 						<% end %>
 						<% end %>
 						<br/>
 						<%= link_to 'New Notification', root_path, {class: "btn btn-lg btn-success"} %>
+						<%= link_to('Sign out', destroy_user_session_path,class: "btn btn-lg btn-primary", :method => :delete) %>
 					</div>
 				</div>
 			</div>
