Task status, tests added

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Task</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
+<body style="background-color:#419CD9">
+	<div class="text-center" style="padding-top:100px">
+		<%= render 'form' %>
+	</div>
+</body>
