--- a/app/views/tasks/_tasks_index.html.erb
+++ b/app/views/tasks/_tasks_index.html.erb
@@ -13,11 +13,20 @@
     <% @tasks.each do |task| %>
     <tr>
       <th scope="row"><%= task.id %></th>
-      <td><%= task.url %></td>
+      <td><%= link_to task.url,task_path(task),:method => :get %></td>
       <td><%= task.words %></td>
-      <td id="<%= task.id %>"><%=task.task_status%></td>
-      <td><%= button_to('Delete', task_path(task),:method => :delete) %></td>
-      <td><%= button_to('On',task_update_path(task),:method => :put,:class => 'task_completed',:id => 'toggle_button')%></td>
+      <td><%= task.status_name %></td>
+      <td><%= button_to('Delete', task_path(task),:method => :delete,:class =>'delete') %></td>
+      <% if task.active? %>
+      <td>
+        <%= button_to('Off',task_inactive_path(task),:method => :put,:class => 'task_inactive')%>
+      </td>
+      <% else %>
+      <td>
+      <%= button_to('On',task_active_path(task),:method => :put,:class => '
+        task_active')%>
+      </td>
+      <% end %>
     </tr>
     <% end %>
   </tbody>
@@ -25,9 +34,3 @@
 <br/>
 <%= link_to 'New task', root_path, {class: "btn btn-lg btn-success"} %>
 <%= link_to('Sign out', destroy_user_session_path,class: "btn btn-lg btn-primary", :method => :delete) %>
-<script type="text/javascript">
-  $('#toggle_button').click(function(){
-     var $this=$(this);
-     $this.val("Off");
- });
-</script>
