--- a/app/views/tasks/_tasks_index.html.erb
+++ b/app/views/tasks/_tasks_index.html.erb
@@ -17,16 +17,7 @@
       <td><%= task.words %></td>
       <td><%= task.status_name %></td>
       <td><%= button_to('Delete', task_path(task),:method => :delete,:class =>'delete') %></td>
-      <% if task.active? %>
-      <td>
-        <%= button_to('Off',inactive_task_path(task),:method => :put,:class => 'task_inactive')%>
-      </td>
-      <% else %>
-      <td>
-      <%= button_to('On',active_task_path(task),:method => :put,:class => '
-        task_active')%>
-      </td>
-      <% end %>
+      <td><%= task.toggle_buttons %></td>
     </tr>
     <% end %>
   </tbody>
