--- a/app/views/tasks/_tasks_index.html.erb
+++ b/app/views/tasks/_tasks_index.html.erb
@@ -11,12 +11,12 @@
   </thead>
   <tbody>
     <% @tasks.each do |task| %>
-    <tr>
+    <tr id="task_row">
       <th scope="row"><%= task.id %></th>
       <td><%= link_to task.url,task_path(task),:method => :get %></td>
       <td><%= task.words %></td>
       <td><%= task.status_name %></td>
-      <td><%= button_to('Delete', task_path(task),:method => :delete,:class =>'delete') %></td>
+      <td><%= button_to('Delete', task_path(task),:method => :delete,:class =>'delete',:remote=> true) %></td>
       <td><%= task.toggle_buttons %></td>
     </tr>
     <% end %>
