--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,69 +1,78 @@
-<%= form_for(@task, remote: true) do |f| %>
+<%= form_for(@task) do |f| %>
 <% if @task.errors.any? %>
 <div id="error_explanation">
-  <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
+	<h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
 
-  <ul>
-    <% @task.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
+	<ul>
+		<% @task.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
 </div>
-<% end %>
-<div class="text-center" style="padding-top:100px">
-  <div class="container"  id="form">
-    <div style="margin-top:-50px; float: right" class="user">
-      <% if user_signed_in? %>
-      <%= link_to('Dashboard', tasks_path,class: "btn btn-lg btn-primary") %>
-      <% end %>
-    </div>
-    <font color="white"> 
-      <h1>We monitor webpages, so you don't have to!</h1>
-      <h3>Enter the URL of the webpage you want to monitor. We’ll send You an email when we find a keyword</h3>
-    </font>
+<% end %>  
+<body class="purple">
+	<div class="container">
 
-    <div class="row">
-      <div class="col-md-3">
-      </div>
+		<div class="row">
+			<nav class="navbar navigation">
+				<div class="flex-container pull-right">
+					<div class="flex-item">
+						<div class="nav navbar-nav">
+							<%= render 'buttons' %>
+						</div>
+					</div>
+				</div><!-- /.container-fluid -->
+			</nav>
+		</div>
 
-      <div class="col-md-6">
-        <div class="panel panel-default">
-          <div class="panel-body">
 
-            <div class="form-group">
-              <div class="form-group form-group-lg">
-                <%= f.text_field :url, type: "text", class: "form-control", placeholder: 'Enter Website URL, e.g. http://www.google.com', required: "true" %>
-              </div>
-            </div>
+		<div class="row">
+			<div class="col-sm-12 text-center title-text">
+				<span class="title">Kolosek<span class="titlelight">Notify</span></span>
+			</div>
+		</div>
 
-            <div class="form-group">
-              <div class="form-group form-group-lg">
-                <%= f.text_field :words, type: "text", class: "form-control", placeholder: 'Keywords (separated by a semicolon)', required: "true" %>
-              </div>
-            </div>
-            
-            <div class="form-group">
-              <div class="form-group form-group-lg">
-                <%= f.text_field :email, type: "email", class: "form-control", placeholder: 'Your e-mail address', required: "true" %>
-              </div>
-            </div>
+		<div class="row title-text top">
+			<div class="col-sm-12 text-center title">
+				<span class="titlelight">We monitor webpages so you don't have to!</span>
+			</div>
+			<% if !user_signed_in? %>
+			<div class="col-sm-12 title">
+				<span class="subtitlelight">Enter the URL of the webpage you want to monitor. We'll send You an email when we find a keyword</span>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-6 col-sm-offset-3">
+				<div class="panel panel-default login-panel top">
+					<div class="panel-body">   
+						<div class="col-sm-12">
+							<div class="row inputgroup">
+								<%= f.text_field :url, type: "text", class: "inputfield", placeholder: 'Enter website URL, e.g. http://www.google.com', required: "true" %>
+							</div>
+							<div class="row inputgroup">
+								<%= f.text_field :words, type: "text", class: "inputfield", placeholder: 'Keywords (separated by a semicolon)', required: "true" %>
+							</div>
+							<div class="row inputgroup">
+								<%= f.text_field :email, type: "email", class: "inputfield", placeholder: 'Your e-mail address', required: "true" %>
+							</div>
+							<div class="row">
+								<div class="col-sm-12 text-center">
+									<%= f.submit "Submit tracking!", :class => 'btn btn-md loginbtn center' %>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<% end %>
+		<% end %>
+		<div class="row title-text">
+			<div class="col-sm-12 text-center title">
+				<span class="subtitletiny">We will keep your email secret and free of spam: it's a promise!</span>
+			</div>
+		</div>
+	</div>
 
-            <div class="actions">
-              <%= f.submit "Submit tracking!", :class => 'btn btn-lg btn-success' %>
-            </div>
-            <br/>
-          
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-      </div>
-    </div>
-    <font color="white"> 
-      We will keep your email secret and free of spam: it’s a promise!
-    </font> 
-
-  </div>
-</div>
-</form>
-<% end %>
+</body>
