--- a/app/views/tasks/_tasks_index.html.erb
+++ b/app/views/tasks/_tasks_index.html.erb
@@ -1,27 +1,116 @@
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th style="text-align:center;">Url</th>
-      <th style="text-align:center;">Words</th>
-      <th style="text-align:center;">Status</th>
-      <th style="text-align:center;">Delete</th>
-      <th style="text-align:center;"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @tasks.each do |task| %>
-    <tr id="task_row">
-      <th scope="row"><%= task.id %></th>
-      <td><%= link_to task.url,task_path(task),:method => :get %></td>
-      <td><%= task.words %></td>
-      <td><%= task.status_name %></td>
-      <td><%= button_to('Delete', task_path(task),:method => :delete,:class =>'delete',:remote=> true) %></td>
-      <td><%= task.toggle_buttons %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-<br/>
-<%= link_to 'New task', root_path, {class: "btn btn-lg btn-success"} %>
-<%= link_to('Sign out', destroy_user_session_path,class: "btn btn-lg btn-primary", :method => :delete) %>
+<body class="grey">
+ 
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="navbar navigation">
+        <div class="flex-container">
+          <div class="flex-item">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="/">Kolosek<span class="fetch">Notify</span></a>
+            </div>
+          </div>
+          <div class="flex-item">
+            <ul class="no-list-style no-padding">
+              <li class="inline">
+                <button class="btn btn-md button-header"><span class="glyphicon glyphicon-th-list"></span></button>
+              </li>
+              <li class="inline">
+                <button class="btn btn-md button-header"><span class="glyphicon glyphicon-user"></span></button>
+              </li>
+              <li class="inline">
+                <button class="btn btn-md button-header"><span class="glyphicon glyphicon-bell"></span></button>
+              </li>
+            </ul>
+          </div>
+          <div class="flex-item">
+            <div class="nav navbar-nav">
+              <%= link_to('Sign out', destroy_user_session_path,class: "btn btn-md button-header", :method => :delete, id: "logout") %>
+            </div>
+          </div>
+        </div><!-- /.container-fluid -->
+      </nav>
+    </div>
+
+    <div class="row">
+      <nav class="subheader">
+        <div class="flex-container flex-center">
+          <div class="flex-item">
+            <div class="active-text">
+              <span class="activenum"> <span class="taskicon glyphicon glyphicon-th-large"></span><%= @t.active.count %>/<%= @tasks.count %> Tasks active</span>
+            </div>
+          </div>
+          <div class="flex-item">
+            <button type="submit" class="btn btn-md button-task" data-toggle="modal" data-target="#myModal">+ New Task</button>
+          </div>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content grey">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title text-center" id="myModalLabel">New task</h4>
+              </div>
+              <div class="modal-body text-center">
+                <%= render 'form_popup' %>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        </div><!-- /.container-fluid -->
+      </nav>
+    </div>
+
+    <div class="row">
+      <div class="flex-column flex-center">
+        <div class="task-header">
+          <div class="col-xs-2">
+            <span class="headeritem">Time</span>
+          </div>
+          <div class="col-xs-3">
+            <span class="headeritem">URL</span>
+          </div>
+          <div class="col-xs-3">
+            <span class="headeritem">Keywords</span>
+          </div>
+          <div class="col-xs-2">
+            <span class="headeritem">Status</span>
+          </div>
+          <div class="col-xs-1">
+            <span class="headeritem">On/Off</span>
+          </div>
+          <div class="col-xs-1">
+            <span class="headeritem">Delete</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="flex-column flex-center">
+         <% @tasks.each do |task| %>
+        <div class="task-item -white">
+          <div class="col-xs-2">
+            <span><%= task.created_at %></span>
+          </div>
+          <div class="col-xs-3">
+            <span><%= link_to task.url,edit_task_path(task),:method => :get %></span>
+          </div>
+          <div class="col-xs-3">
+            <span class="keyword"><%= task.words%></span>
+          </div>
+          <div class="col-xs-2">
+            <span><%= task.status_name%></span>
+          </div>
+          <div class="col-xs-1">
+            <span><%= task.toggle_buttons %></span>
+          </div>
+          <div class="col-xs-1">
+            <%= link_to('X', task_path(task),:method => :delete,:class =>"btn delete") %>
+          </div>
+        </div>
+          <% end %>
+      </div>
+  </div>
+
+</body>
