--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,17 +17,23 @@
 @import "bootstrap";
 
 // Core variables and mixins
-@import "bootstrap/variables";
 
 // Reset and dependencies
 
 // Core CSS
-@import "bootstrap/type";
-@import "bootstrap/forms";
-@import "bootstrap/buttons";
 
 // Components
 @import "bootstrap/panels";
+@import "components/variables";
+@import "components/helpers";
+@import "components/mixins";
+@import "components/main";
+@import "components/home";
+@import "components/login";
+@import "components/header";
+@import "components/tasks";
+@import "components/toggle";
+
 
 // Components w/ JavaScript
 
