--- a/app/views/tasks/_tasks_index.html.erb
+++ b/app/views/tasks/_tasks_index.html.erb
@@ -36,7 +36,7 @@
         <div class="flex-container flex-center">
           <div class="flex-item">
             <div class="active-text">
-              <span class="activenum"> <span class="taskicon glyphicon glyphicon-th-large"></span><%= @t.active.count %>/<%= Task.count %> Tasks active</span>
+              <span class="activenum"> <span class="taskicon glyphicon glyphicon-th-large"></span><%= Task.count %>/<%= Task.count %> Tasks active</span>
             </div>
           </div>
           <div class="flex-item">
