status commented out

--- a/app/views/tasks/_tasks_index.html.erb
+++ b/app/views/tasks/_tasks_index.html.erb
@@ -100,7 +100,7 @@
             <span class="keyword"><%= task.words%></span>
           </div>
           <div class="col-xs-2">
-            <span><%= task.status_name%></span>
+            <span><%#= task.status_name %></span>
           </div>
           <div class="col-xs-1">
             <span><%= task.toggle_buttons %></span>
