Refactoring on views and models

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
             </div>
             <div class="below">
               <h2 class="headline">Already have an account?</h2>
-              <a href="sign_in" class="link">Sign in</a>
+              <%= link_to "Sign in", new_user_session_path, :class=> "link" %>
             </div>
             <% end %>
           </div>
