--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,42 @@
-<h2>Change your password</h2>
+<body class="purple">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 sign-form">
+        <h4 class="title">Change your password</h4>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
+        <%= f.hidden_field :reset_password_token %>
+
+        <div class="row">
+          <div class="col-sm-6 col-sm-offset-3">
+            <div class="panel panel-default login-panel top">
+              <div class="panel-body">   
+                <div class="col-sm-12">
+                  <div class="input-group">
+                    <%= f.label :password, "New password"%>
+                    <% if @minimum_password_length %>
+                    <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+                    <% end %>
+                    <%= f.password_field :password, autocomplete: "off",:class =>"field" %>
+                  </div>
+                  <div class="input-group">
+                    <%= f.label :password_confirmation,"Confirm your password" %><br />
+                    <%= f.password_field :password_confirmation, autocomplete: "off", :class=>"field" %>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-12 text-center">
+                      <%= f.submit "Send me reset password instructions", :class => 'btn btn-md loginbtn center' %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</body>
