--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,34 @@
-<h2>Forgot your password?</h2>
+<body class="purple">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 sign-form">
+				<h1 class="title">Kolosek<span class="titlelight">Notify</span></h1>
+				<h4 class="title">Forgot your password?</h4>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+				<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+				<%= devise_error_messages! %>
+				<div class="row">
+			<div class="col-sm-6 col-sm-offset-3">
+				<div class="panel panel-default login-panel top">
+					<div class="panel-body">   
+						<div class="col-sm-12">
+							<div class="row inputgroup">
+								<%= f.text_field :email, type: "email", class: "inputfield", placeholder: 'Your e-mail address', required: "true" %>
+							</div>
+							<div class="row">
+								<div class="col-sm-12 text-center">
+									<%= f.submit "Send me reset password instructions", :class => 'btn btn-md loginbtn center' %>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+					</div>
+				</div>
+				<% end %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+			</div>
+		</div>
+	</div>
+</body>
